Add chart refresh interval to ingress-nginx release.yaml

--- a/clusters/home/ingress-nginx/release.yaml
+++ b/clusters/home/ingress-nginx/release.yaml
@@ -8,6 +8,7 @@ spec:
   chart:
     spec:
       chart: ingress-nginx
+      interval: 1m
       version: "4.*"
       sourceRef:
         kind: HelmRepository
