--- a/clusters/home/ingress-nginx/release.yaml
+++ b/clusters/home/ingress-nginx/release.yaml
@@ -5,12 +5,9 @@ metadata:
   namespace: ingress-nginx
 spec:
   interval: 5m
-  chart:
-    spec:
-      chart: ingress-nginx
-      interval: 1m
-      version: "4.*"
-      sourceRef:
-        kind: HelmRepository
-        name: ingress-nginx
-        namespace: ingress-nginx
+  chart: ingress-nginx
+  reconcileStrategy: ChartVersion
+  sourceRef:
+    kind: HelmRepository
+    name: ingress-nginx
+  version: "4.*"
