--- a/clusters/home/ingress-nginx/release.yaml
+++ b/clusters/home/ingress-nginx/release.yaml
@@ -1,5 +1,5 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: HelmRelease
+kind: HelmChart
 metadata:
   name: ingress-nginx
   namespace: ingress-nginx
