Update cloudflare-tunnel chart reference to "charts/cloudflare-tunnel" in release.yaml

--- a/clusters/home/cloudflare-tunnel/release.yaml
+++ b/clusters/home/cloudflare-tunnel/release.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: cloudflare-tunnel
+      chart: charts/cloudflare-tunnel
       version: "0.2.x"
       sourceRef:
         kind: HelmRepository
