--- a/clusters/home/cloudflare-tunnel/release.yaml
+++ b/clusters/home/cloudflare-tunnel/release.yaml
@@ -16,6 +16,10 @@ spec:
       interval: 1m
   values:
     cloudflare:
+      account:
+      tunnelName: home-k3s-cluster
+      tunnelId: 03ca802e-43ae-419b-b4ca-2eeb20597dc2
+      secret: KxjorqhE2UXOFU9F/yeTsHyof5inn8q3hnlXauP+qwY=
       ingress:
         # We point cloudflare to our nginx ingress to receive all requests
         - service: https://ingress-nginx-controller.ingress-nginx.svc.cluster.local:443
