--- a/clusters/home/velero/repository.yaml
+++ b/clusters/home/velero/repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: kasten-io
+  name: kasten
   namespace: kasten-io
 spec:
   interval: 1m
