--- a/clusters/home/vaultwarden/service.yaml
+++ b/clusters/home/vaultwarden/service.yaml
@@ -16,6 +16,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: vaultwarden-ingress
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: "nginx"
 spec:
