--- a/clusters/home/longhorn/service.yaml
+++ b/clusters/home/longhorn/service.yaml
@@ -1,46 +1,46 @@
-# Required to see the ui
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: longhorn-svc
-  namespace: longhorn-system
-spec:
-  type: LoadBalancer
-  selector:
-    app: longhorn-ui
-  ports:
-    - port: 80
-      targetPort: http
+# # Required to see the ui
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: longhorn-svc
+#   namespace: longhorn-system
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     app: longhorn-ui
+#   ports:
+#     - port: 80
+#       targetPort: http
 
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: longhorn-ingress
-  namespace: longhorn-system
-  annotations:
-    kubernetes.io/ingress.class: "nginx"
-    # FOR AUTH: https://longhorn.io/docs/1.4.2/deploy/accessing-the-ui/longhorn-ingress/
-    # type of authentication
-    nginx.ingress.kubernetes.io/auth-type: basic
-    # prevent the controller from redirecting (308) to HTTPS
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    # name of the secret that contains the user/password definitions
-    nginx.ingress.kubernetes.io/auth-secret: basic-auth
-    # message to display with an appropriate context why the authentication is required
-    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
-    # custom max body size for file uploading like backing image uploading
-    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
-spec:
-  rules:
-    - host: longhorn.pacholoamit.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: longhorn-svc
-                port:
-                  name: http
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: longhorn-ingress
+#   namespace: longhorn-system
+#   annotations:
+#     kubernetes.io/ingress.class: "nginx"
+#     # FOR AUTH: https://longhorn.io/docs/1.4.2/deploy/accessing-the-ui/longhorn-ingress/
+#     # type of authentication
+#     nginx.ingress.kubernetes.io/auth-type: basic
+#     # prevent the controller from redirecting (308) to HTTPS
+#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+#     # name of the secret that contains the user/password definitions
+#     nginx.ingress.kubernetes.io/auth-secret: basic-auth
+#     # message to display with an appropriate context why the authentication is required
+#     nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
+#     # custom max body size for file uploading like backing image uploading
+#     nginx.ingress.kubernetes.io/proxy-body-size: 10000m
+# spec:
+#   rules:
+#     - host: longhorn.pacholoamit.com
+#       http:
+#         paths:
+#           - path: /
+#             pathType: Prefix
+#             backend:
+#               service:
+#                 name: longhorn-svc
+#                 port:
+#                   name: http
