--- a/clusters/home/vaultwarden/service.yaml
+++ b/clusters/home/vaultwarden/service.yaml
@@ -1,33 +1,33 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: vaultwarden-svc
-#   namespace: default
-# spec:
-#   type: LoadBalancer
-#   selector:
-#     app: vaultwarden
-#   ports:
-#     - port: 80
-#       targetPort: 80
+apiVersion: v1
+kind: Service
+metadata:
+  name: vaultwarden-svc
+  namespace: default
+spec:
+  type: LoadBalancer
+  selector:
+    app: vaultwarden
+  ports:
+    - port: 80
+      targetPort: 80
 
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: vaultwarden-ingress
-#   namespace: default
-#   annotations:
-#     kubernetes.io/ingress.class: "nginx"
-# spec:
-#   rules:
-#     - host: vaultwarden.pacholoamit.com
-#       http:
-#         paths:
-#           - path: /
-#             pathType: Prefix
-#             backend:
-#               service:
-#                 name: vaultwarden-svc
-#                 port:
-#                   number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: vaultwarden-ingress
+  namespace: default
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+spec:
+  rules:
+    - host: vaultwarden.pacholoamit.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: vaultwarden-svc
+                port:
+                  number: 80
