--- a/clusters/home/kube-prometheus-stack/release.yaml
+++ b/clusters/home/kube-prometheus-stack/release.yaml
@@ -11,7 +11,7 @@ spec:
       version: "47.x"
       sourceRef:
         kind: HelmRepository
-        name: prometheus-community
+        name: prometheus
         namespace: monitoring
       interval: 1m
   values:
