--- a/clusters/home/kube-prometheus-stack/release.yaml
+++ b/clusters/home/kube-prometheus-stack/release.yaml
@@ -7,11 +7,11 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: prometheus-community/kube-prometheus-stack
+      chart: kube-prometheus-stack
       version: "47.x"
       sourceRef:
         kind: HelmRepository
-        name: prometheus
+        name: prometheus-community
         namespace: monitoring
       interval: 1m
   values:
