disable longhorn as default storage class

--- a/clusters/home/longhorn/release.yaml
+++ b/clusters/home/longhorn/release.yaml
@@ -14,3 +14,6 @@ spec:
         name: longhorn
         namespace: longhorn-system
       interval: 1m
+  values:
+    persistence:
+      defaultClass: false
