--- a/clusters/home/cloudflare-tunnel/kustomization.yaml
+++ b/clusters/home/cloudflare-tunnel/kustomization.yaml
@@ -1,3 +1,9 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+  - deployment.yaml
+  - secret.yaml
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
