--- a/clusters/home/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/home/kube-prometheus-stack/kustomization.yaml
@@ -1,3 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+  - release.yaml
+  - repository.yaml
+  - secret.yaml
+  - service.yaml
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
