--- a/clusters/home/cloudflare-tunnel/kustomization.yaml
+++ b/clusters/home/cloudflare-tunnel/kustomization.yaml
@@ -3,20 +3,21 @@ kind: Kustomization
 resources:
   - deployment.yaml
   - secret.yaml
+
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudflare
+  name: cloudflare-provisioner
   namespace: cloudflare
 spec:
-  dependsOn:
-    - name: sealed-secrets
-  interval: 1h
+  interval: 10m
+  path: ./clusters/home/sealed-secrets
   retryInterval: 1m
   timeout: 5m
   wait: true
-  path: ./clusters/home/sealed-secrets
+  dependsOn:
+    - name: sealed-secrets
   sourceRef:
     kind: GitRepository
     name: sealed-secrets
