--- a/clusters/home/kube-prometheus-stack/kustomization.yaml
+++ b/clusters/home/kube-prometheus-stack/kustomization.yaml
@@ -5,6 +5,11 @@ resources:
   - repository.yaml
   - secret.yaml
   - service.yaml
+patches:
+  - path: release.yaml
+    target:
+      kind: HelmRelease
+
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
