--- a/clusters/home/longhorn/kustomization.yaml
+++ b/clusters/home/longhorn/kustomization.yaml
@@ -5,7 +5,10 @@ resources:
   - repository.yaml
   - secret.yaml
   - service.yaml
-
+patches:
+  - path: release.yaml
+    target:
+      kind: HelmRelease
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
