--- a/clusters/home/cloudflare-tunnel/kustomization.yaml
+++ b/clusters/home/cloudflare-tunnel/kustomization.yaml
@@ -9,7 +9,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: cloudflare-provisioner
-  namespace: cloudflare
+  namespace: flux-system
 spec:
   interval: 10m
   timeout: 5m
