--- a/clusters/home/cloudflare-tunnel/kustomization.yaml
+++ b/clusters/home/cloudflare-tunnel/kustomization.yaml
@@ -11,9 +11,7 @@ metadata:
   name: cloudflare
   namespace: flux-system
 spec:
-  interval: 1h
-  retryInterval: 1m
-  timeout: 5m
+  interval: 1m
   prune: true
   wait: true
   path: ./clusters/home/cloudflare-tunnel
