--- a/clusters/home/sealed-secrets/kustomization.yaml
+++ b/clusters/home/sealed-secrets/kustomization.yaml
@@ -3,6 +3,10 @@ kind: Kustomization
 resources:
   - release.yaml
   - repository.yaml
+patches:
+  - path: release.yaml
+    target:
+      kind: HelmRelease
 
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
