modify kustomization yaml

--- a/clusters/home/sealed-secrets/release.yaml
+++ b/clusters/home/sealed-secrets/release.yaml
@@ -15,7 +15,7 @@ spec:
   releaseName: sealed-secrets-controller
   targetNamespace: flux-system
   install:
-    crds: Create
+    crds: CreateReplace
   upgrade:
     crds: CreateReplace
   values:
