--- a/clusters/home/longhorn/kustomization.yaml
+++ b/clusters/home/longhorn/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - repository.yaml
   - secret.yaml
   - service.yaml
+  - namespace.yaml
 patches:
   - path: release.yaml
     target:
