--- a/clusters/home/longhorn.yaml
+++ b/clusters/home/longhorn.yaml
@@ -1,16 +1,3 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
-resources:
-  - release.yaml
-  - repository.yaml
-  - secret.yaml
-  - service.yaml
-  - namespace.yaml
-patches:
-  - path: release.yaml
-    target:
-      kind: HelmRelease
-
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
@@ -24,7 +11,8 @@ spec:
   retryInterval: 1m
   timeout: 5m
   wait: true
-  path: ./clusters/home/sealed-secrets
+  prune: true
+  path: ./infrastructure/longhorn
   sourceRef:
     kind: GitRepository
     name: sealed-secrets
