--- a/clusters/home/prometheus.yaml
+++ b/clusters/home/prometheus.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudflare
+  name: monitoring
   namespace: flux-system
 spec:
   dependsOn:
@@ -10,7 +10,7 @@ spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./infrastructure/cloudflare
+  path: ./infrastructure/prometheus-stack
   sourceRef:
     kind: GitRepository
     name: flux-system
