--- a/clusters/home/ingress-nginx.yaml
+++ b/clusters/home/ingress-nginx.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: longhorn
+  name: ingress-nginx
   namespace: flux-system
 spec:
   dependsOn:
@@ -10,7 +10,7 @@ spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./infrastructure/longhorn
+  path: ./infrastructure/ingress-nginx
   sourceRef:
     kind: GitRepository
     name: flux-system
