--- a/clusters/home/descheduler.yaml
+++ b/clusters/home/descheduler.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: ingress-nginx
+  name: descheduler
   namespace: flux-system
 spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./infrastructure/ingress-nginx
+  path: ./infrastructure/descheduler
   sourceRef:
     kind: GitRepository
     name: flux-system
