--- a/infrastructure/sealed-secrets/kustomization.yaml
+++ b/infrastructure/sealed-secrets/kustomization.yaml
@@ -1,9 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-system
 resources:
   - release.yaml
   - repository.yaml
-patches:
-  - path: release.yaml
-    target:
-      kind: HelmRelease
