--- a/clusters/home/sealed-secrets.yaml
+++ b/clusters/home/sealed-secrets.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
+  targetNamespace: flux-system
   prune: true
   wait: true
   path: ./infrastructure/sealed-secrets
