--- a/clusters/home/vaultwarden.yaml
+++ b/clusters/home/vaultwarden.yaml
@@ -9,6 +9,7 @@ spec:
     - name: sealed-secrets
     - name: longhorn
   interval: 1m
+  targetNamespace: default
   prune: true
   wait: true
   path: ./apps/vaultwarden
