--- a/clusters/home/cloudflare.yaml
+++ b/clusters/home/cloudflare.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: sealed-secrets
+  targetNamespace: cloudflare
   interval: 1m
   prune: true
   wait: true
