--- a/clusters/home/descheduler.yaml
+++ b/clusters/home/descheduler.yaml
@@ -6,6 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 1m
+  targetNamespace: kube-system
   prune: true
   wait: true
   path: ./infrastructure/descheduler
