--- a/clusters/home/longhorn.yaml
+++ b/clusters/home/longhorn.yaml
@@ -8,6 +8,7 @@ spec:
   dependsOn:
     - name: sealed-secrets
   interval: 1m
+  targetNamespace: longhorn-system
   prune: true
   wait: true
   path: ./infrastructure/longhorn
