--- a/infrastructure/ingress-nginx/kustomization.yaml
+++ b/infrastructure/ingress-nginx/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ingress-nginx
 resources:
   - repository.yaml
   - release.yaml
+  - namespace.yaml
