--- a/infrastructure/velero/kustomization.yaml
+++ b/infrastructure/velero/kustomization.yaml
@@ -1,5 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: monitoring
+namespace: velero
 resources:
   - namespace.yaml
+  - repository.yaml
+  - release.yaml
+  - secret.yaml
