--- a/clusters/home/velero.yaml
+++ b/clusters/home/velero.yaml
@@ -5,6 +5,8 @@ metadata:
   name: velero
   namespace: flux-system
 spec:
+  dependsOn:
+    - name: sealed-secrets
   interval: 1m
   prune: true
   wait: true
