--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -12,6 +12,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: velero
+        namespace: velero
       interval: 1m
   values:
     initContainers:
