--- a/infrastructure/velero/repository.yaml
+++ b/infrastructure/velero/repository.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: velero
+  name: vmware-tanzu
   namespace: velero
 spec:
   interval: 1m
