--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -49,6 +49,8 @@ spec:
           default: true
           config:
             region: ap-southeast-1
+            s3ForcePathStyle: "true"
+            s3Url: https://s3.ap-southeast-1.velero-k3s-cluster-backups.com
           credential:
             name: aws
             key: aws-credentials
