--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -31,6 +31,11 @@ spec:
         volumeMounts:
           - mountPath: /target
             name: plugins
+      - name: velero-plugin-for-csi
+        image: velero/velero-plugin-for-csi:v0.5.0
+        volumeMounts:
+          - mountPath: /target
+            name: plugins
     metrics:
       enabled: true
       scrapeInterval: 120s
