--- a/infrastructure/velero/schedule.yaml
+++ b/infrastructure/velero/schedule.yaml
@@ -9,7 +9,7 @@ spec:
     hooks: {}
     includedNamespaces:
       - longhorn-system
-      - vaultwarden
+      - default
 
     snapshotVolumes: true
     ttl: 168h0m0s
