--- a/clusters/home/longhorn.yaml
+++ b/clusters/home/longhorn.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: sealed-secrets
+    - name: external-snapshotter # additional CRDs
   interval: 1m
   prune: true
   wait: true
