--- a/clusters/home/external-snapshotter.yaml
+++ b/clusters/home/external-snapshotter.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: external-snapshotter
+  name: snapshot-controller
   namespace: flux-system
 spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./external-crds/external-snapshotter
+  path: ./external-crds/snapshot-controller
   sourceRef:
     kind: GitRepository
     name: flux-system
