--- a/clusters/home/snapshot-controller.yaml
+++ b/clusters/home/snapshot-controller.yaml
@@ -1,14 +1,33 @@
----
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: snapshot-controller
-  namespace: flux-system
+  name: external-snapshotter-crd
+  namespace: kube-system
 spec:
   interval: 1m
-  prune: true
   wait: true
-  path: ./external-crds/snapshot-controller
+  prune: true
+  timeout: 1m
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: external-snapshotter
+  path: "./client/config/crd"
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+
+metadata:
+  name: external-snapshotter-controller
+  namespace: kube-system
+spec:
+  dependsOn:
+    - name: external-snapshotter-crd
+  interval: 1m
+  wait: true
+  prune: true
+  timeout: 1m
+  sourceRef:
+    kind: GitRepository
+    name: external-snapshotter
+  path: "./deploy/kubernetes/snapshot-controller"
