--- a/clusters/home/snapshot-controller.yaml
+++ b/clusters/home/snapshot-controller.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: external-snapshotter-crd
-  namespace: kube-system
+  namespace: flux-system
 spec:
   interval: 1m
   wait: true
@@ -18,8 +18,8 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 
 metadata:
-  name: external-snapshotter-controller
-  namespace: kube-system
+  name: external-snapshotter
+  namespace: flux-system
 spec:
   dependsOn:
     - name: external-snapshotter-crd
