--- a/infrastructure/longhorn/volume-snapshot-class.yaml
+++ b/infrastructure/longhorn/volume-snapshot-class.yaml
@@ -1,6 +1,6 @@
-apiVersion: snapshot.storage.k8s.io/v1beta1
-kind: VolumeSnapshotClass
-metadata:
-  name: longhorn
-driver: driver.longhorn.io
-deletionPolicy: Delete
+# apiVersion: snapshot.storage.k8s.io/v1beta1
+# kind: VolumeSnapshotClass
+# metadata:
+#   name: longhorn
+# driver: driver.longhorn.io
+# deletionPolicy: Delete
