--- a/infrastructure/velero/schedule.yaml
+++ b/infrastructure/velero/schedule.yaml
@@ -1,15 +1,15 @@
-# apiVersion: velero.io/v1
-# kind: Schedule
-# metadata:
-#   name: general
-#   namespace: velero
-# spec:
-#   schedule: "00 18 * * *"
-#   template:
-#     hooks: {}
-#     includedNamespaces:
-#       - default
+apiVersion: velero.io/v1
+kind: Schedule
+metadata:
+  name: general
+  namespace: velero
+spec:
+  schedule: "00 18 * * *"
+  template:
+    hooks: {}
+    includedNamespaces:
+      - default
 
-#     snapshotVolumes: true
-#     ttl: 168h0m0s
-#   useOwnerReferencesInBackup: false
+    snapshotVolumes: true
+    ttl: 168h0m0s
+  useOwnerReferencesInBackup: false
