--- a/clusters/home/snapshot-controller.yaml
+++ b/clusters/home/snapshot-controller.yaml
@@ -1,33 +1,14 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: external-snapshotter-crd
-  namespace: flux-system
-spec:
-  interval: 1m
-  wait: true
-  prune: true
-  timeout: 1m
-  sourceRef:
-    kind: GitRepository
-    name: external-snapshotter
-  path: "./client/config/crd"
-
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
-
 metadata:
-  name: external-snapshotter
+  name: snapshot-controller
   namespace: flux-system
 spec:
-  dependsOn:
-    - name: external-snapshotter-crd
   interval: 1m
-  wait: true
   prune: true
-  timeout: 1m
+  wait: true
+  path: ./external-crds/snapshot-controller
   sourceRef:
     kind: GitRepository
-    name: external-snapshotter
-  path: "./deploy/kubernetes/snapshot-controller"
+    name: flux-system
