--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -56,3 +56,6 @@ spec:
           default: true
           config:
             region: ap-southeast-1
+          credential:
+            name: aws
+            key: cloud
