--- a/clusters/home/velero/config.yaml
+++ b/clusters/home/velero/config.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: velero
+  name: velero-config
   namespace: flux-system
 spec:
   dependsOn:
@@ -10,7 +10,7 @@ spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./infrastructure/velero
+  path: ./configs/velero
   sourceRef:
     kind: GitRepository
     name: flux-system
