--- a/infrastructure/longhorn/volume-snapshot-class.yaml
+++ b/infrastructure/longhorn/volume-snapshot-class.yaml
@@ -1,6 +1,10 @@
-apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
+apiVersion: snapshot.storage.k8s.io/v1
 metadata:
-  name: longhorn
+  name: longhorn-snapshot-vsc
+  labels:
+    velero.io/csi-volumesnapshot-class: "true"
 driver: driver.longhorn.io
 deletionPolicy: Delete
+parameters:
+  type: bak
