--- a/infrastructure/longhorn/volume-snapshot-class.yaml
+++ b/infrastructure/longhorn/volume-snapshot-class.yaml
@@ -1,10 +1,10 @@
 kind: VolumeSnapshotClass
 apiVersion: snapshot.storage.k8s.io/v1
 metadata:
-  name: longhorn-snapshot-vsc
+  name: longhorn
   labels:
     velero.io/csi-volumesnapshot-class: "true"
 driver: driver.longhorn.io
 deletionPolicy: Delete
-parameters:
-  type: bak
+# parameters:
+# type: bak
