--- a/clusters/home/velero/config.yaml
+++ b/clusters/home/velero/config.yaml
@@ -1,17 +1,17 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: velero-config
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: sealed-secrets
-    - name: velero
-  interval: 1m
-  prune: true
-  wait: true
-  path: ./configs/velero
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: velero-config
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: sealed-secrets
+#     - name: velero
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   path: ./configs/velero
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
