--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -64,7 +64,7 @@ spec:
         schedule: "00 15 * * *"
         template:
           includedNamespaces:
-            - "default"
+            - default
           snapshotVolumes: true
           ttl: 168h0m0s
         useOwnerReferencesInBackup: false
