--- a/infrastructure/velero/release.yaml
+++ b/infrastructure/velero/release.yaml
@@ -59,3 +59,12 @@ spec:
           credential:
             name: aws
             key: cloud
+    schedules:
+      default:
+        schedule: "00 15 * * *"
+        template:
+          includedNamespaces:
+            - default
+          snapshotVolumes: true
+          ttl: 168h0m0s
+        useOwnerReferencesInBackup: false
