--- a/infrastructure/weave-works-dashboard/service.yaml
+++ b/infrastructure/weave-works-dashboard/service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: LoadBalancer
   selector:
-    app: weave-gitops
+    app: weave-gitops-oss
   ports:
     - port: 9001
       targetPort: 9001
