--- a/infrastructure/weave-works-dashboard/service.yaml
+++ b/infrastructure/weave-works-dashboard/service.yaml
@@ -1,18 +1,3 @@
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: weave-gitops-svc
-  namespace: flux-system
-spec:
-  type: LoadBalancer
-  selector:
-    app: weave-gitops-oss
-  ports:
-    - port: 9001
-      targetPort: 9001
-
----
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -29,6 +14,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: weave-gitops-svc
+                name: ww-gitops-weave-gitops
                 port:
                   number: 9001
