--- a/infrastructure/weave-works-dashboard/service.yaml
+++ b/infrastructure/weave-works-dashboard/service.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: weave-works-svc
+  namespace: flux-system
+spec:
+  type: LoadBalancer
+  selector:
+    app.kubernetes.io/instance: ww-gitops
+    app.kubernetes.io/name: weave-gitops
+  ports:
+    - port: 9001
+      targetPort: tcp
+
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -14,6 +29,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: ww-gitops-weave-gitops
+                name: weave-works-svc
                 port:
                   number: 9001
