--- a/infrastructure/weave-works-dashboard/service.yaml
+++ b/infrastructure/weave-works-dashboard/service.yaml
@@ -1,17 +1,17 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: weave-works-svc
-  namespace: flux-system
-spec:
-  type: LoadBalancer
-  selector:
-    app.kubernetes.io/name: weave-gitops
-  ports:
-    - port: 9001
-      targetPort: tcp
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: weave-works-svc
+#   namespace: flux-system
+# spec:
+#   type: LoadBalancer
+#   selector:
+#     app.kubernetes.io/name: weave-gitops
+#   ports:
+#     - port: 9001
+#       targetPort: tcp
 
----
+# ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -28,6 +28,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: weave-works-svc
+                name: ww-gitops-weave-gitops
                 port:
                   number: 9001
