--- a/clusters/home/prometheus.yaml
+++ b/clusters/home/prometheus.yaml
@@ -1,16 +1,16 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: monitoring
-  namespace: flux-system
-spec:
-  dependsOn:
-    - name: sealed-secrets
-  interval: 1m
-  prune: true
-  wait: true
-  path: ./infrastructure/prometheus-stack
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: monitoring
+#   namespace: flux-system
+# spec:
+#   dependsOn:
+#     - name: sealed-secrets
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   path: ./infrastructure/prometheus-stack
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
