--- a/infrastructure/descheduler/release.yaml
+++ b/infrastructure/descheduler/release.yaml
@@ -15,6 +15,7 @@ spec:
         namespace: kube-system
       interval: 1m
   values:
+    schedule: "0 * * * *"
     deschedulerPolicy:
       strategies:
         RemoveDuplicates:
