consolidate prometheus stack

--- a/infrastructure/prometheus-stack/release.yaml
+++ b/infrastructure/prometheus-stack/release.yaml
@@ -13,7 +13,11 @@ spec:
         kind: HelmRepository
         name: prometheus-community
         namespace: monitoring
-      interval: 1m
+      interval: 60m
+  install:
+    crds: Create
+  upgrade:
+    crds: CreateReplace
   values:
     fullnameOverride: prometheus
 
@@ -193,6 +197,33 @@ spec:
         retention: 6h
         enableAdminAPI: true
         walCompression: true
+        resources:
+          requests:
+            cpu: 200m
+            memory: 200Mi
+        podMonitorNamespaceSelector: {}
+        podMonitorSelector:
+          matchLabels:
+            app.kubernetes.io/component: monitoring
 
     thanosRuler:
       enabled: false
+
+    postRenderers:
+      - kustomize:
+          patches:
+            - target:
+                # Ignore these objects from Flux diff as they are mutated from chart hooks
+                kind: (ValidatingWebhookConfiguration|MutatingWebhookConfiguration)
+                name: kube-prometheus-stack-admission
+              patch: |
+                - op: add
+                  path: /metadata/annotations/helm.toolkit.fluxcd.io~1driftDetection
+                  value: disabled
+            - target:
+                # Ignore these objects from Flux diff as they are mutated at apply time but not at dry-run time
+                kind: PrometheusRule
+              patch: |
+                - op: add
+                  path: /metadata/annotations/helm.toolkit.fluxcd.io~1driftDetection
+                  value: disabled
