--- a/infrastructure/prometheus-stack/kustomization.yaml
+++ b/infrastructure/prometheus-stack/kustomization.yaml
@@ -2,8 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: monitoring
 resources:
+  - namespace.yaml
+  - flux.repository.yaml
+  - prometheus.repository.yaml
+  - loki.kustomization.yaml
+  - config.kustomization.yaml
   - release.yaml
-  - repository.yaml
   - secret.yaml
   - service.yaml
-  - namespace.yaml
