--- a/clusters/home/flux-monitoring.yaml
+++ b/clusters/home/flux-monitoring.yaml
@@ -1,14 +1,14 @@
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: flux-monitoring
-  namespace: flux-system
-spec:
-  interval: 1m
-  prune: true
-  wait: true
-  path: ./infrastructure/flux-monitoring
-  sourceRef:
-    kind: GitRepository
-    name: flux-system
+# ---
+# apiVersion: kustomize.toolkit.fluxcd.io/v1
+# kind: Kustomization
+# metadata:
+#   name: flux-monitoring
+#   namespace: flux-system
+# spec:
+#   interval: 1m
+#   prune: true
+#   wait: true
+#   path: ./infrastructure/flux-monitoring
+#   sourceRef:
+#     kind: GitRepository
+#     name: flux-system
