--- a/clusters/home/prometheus.yaml
+++ b/clusters/home/prometheus.yaml
@@ -1,16 +1,50 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: monitoring
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: sealed-secrets
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   path: ./infrastructure/prometheus-stack
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: kube-prometheus-stack
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: sealed-secrets
+  interval: 1m
+  prune: true
+  wait: true
+  path: ./infrastructure/prometheus-stack
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: monitoring-config
+  namespace: monitoring
+spec:
+  dependsOn:
+    - name: kube-prometheus-stack
+  interval: 30m
+  prune: true
+  wait: true
+  path: ./manifests/monitoring/monitoring-config
+  sourceRef:
+    kind: GitRepository
+    name: flux-monitoring
+
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: loki-stack
+  namespace: monitoring
+spec:
+  dependsOn:
+    - name: kube-prometheus-stack
+  interval: 30m
+  prune: true
+  wait: true
+  path: ./manifests/monitoring/loki-stack
+  sourceRef:
+    kind: GitRepository
+    name: flux-monitoring
