--- a/clusters/home/prometheus.yaml
+++ b/clusters/home/prometheus.yaml
@@ -25,7 +25,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitoring-config
-  namespace: monitoring
+  namespace: flux-system
 spec:
   dependsOn:
     - name: kube-prometheus-stack
@@ -42,7 +42,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: loki-stack
-  namespace: monitoring
+  namespace: flux-system
 spec:
   dependsOn:
     - name: kube-prometheus-stack
