--- a/clusters/home/prometheus.yaml
+++ b/clusters/home/prometheus.yaml
@@ -4,6 +4,18 @@ metadata:
   name: monitoring
 
 ---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: flux-monitoring
+  namespace: monitoring
+spec:
+  interval: 30m
+  url: https://github.com/fluxcd/flux2
+  ref:
+    branch: main
+
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
