--- a/infrastructure/flux-monitoring/flux.repository.yaml
+++ b/infrastructure/flux-monitoring/flux.repository.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
   name: flux-monitoring
-  namespace: monitoring
+  namespace: flux-system
 spec:
   interval: 30m
   url: https://github.com/fluxcd/flux2
