--- a/clusters/home/flux-monitoring.yaml
+++ b/clusters/home/flux-monitoring.yaml
@@ -1,14 +1,16 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: flux-monitoring
-#   namespace: flux-system
-# spec:
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   path: ./infrastructure/flux-monitoring
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: kube-prometheus-stack
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: sealed-secrets
+  interval: 1m
+  prune: true
+  wait: true
+  path: ./infrastructure/prometheus-stack
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
