--- a/infrastructure/flux-monitoring/config.kustomization.yaml
+++ b/infrastructure/flux-monitoring/config.kustomization.yaml
@@ -1,8 +1,9 @@
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: monitoring-config
-  namespace: monitoring
+  namespace: flux-system
 spec:
   dependsOn:
     - name: kube-prometheus-stack
