--- a/infrastructure/flux-monitoring/kustomization.yaml
+++ b/infrastructure/flux-monitoring/kustomization.yaml
@@ -1,9 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: monitoring
 resources:
   - namespace.yaml
-  - repository.yaml
-  - prometheus.kustomization.yaml
+  - flux.repository.yaml
   - loki.kustomization.yaml
   - config.kustomization.yaml
+  - ./prometheus
