--- a/infrastructure/flux-monitoring/loki.kustomization.yaml
+++ b/infrastructure/flux-monitoring/loki.kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: loki-stack
-  namespace: monitoring
+  namespace: flux-system
 spec:
   dependsOn:
     - name: kube-prometheus-stack
