--- a/clusters/home/flux-monitoring.yaml
+++ b/clusters/home/flux-monitoring.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kube-prometheus-stack
+  name: flux-monitoring
   namespace: flux-system
 spec:
   dependsOn:
@@ -10,7 +10,7 @@ spec:
   interval: 1m
   prune: true
   wait: true
-  path: ./infrastructure/prometheus-stack
+  path: ./infrastructure/flux-monitoring
   sourceRef:
     kind: GitRepository
     name: flux-system
