create dedicated kustomization for prometheus

--- a/infrastructure/flux-monitoring/kustomization.yaml
+++ b/infrastructure/flux-monitoring/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - flux.repository.yaml
   - loki.kustomization.yaml
   - config.kustomization.yaml
-  - ./prometheus
+  - prometheus.kustomization.yaml
