rename to flux-system

--- a/infrastructure/flux-monitoring/prometheus.kustomization.yaml
+++ b/infrastructure/flux-monitoring/prometheus.kustomization.yaml
@@ -10,4 +10,4 @@ spec:
   path: ./infrastructure/flux-monitoring/prometheus
   sourceRef:
     kind: GitRepository
-    name: flux-monitoring
+    name: flux-system
