--- a/apps/vikunja/release.yaml
+++ b/apps/vikunja/release.yaml
@@ -23,6 +23,17 @@ spec:
           accessMode: ReadWriteMany
           size: 5Gi
           storageClass: longhorn
+      ingress:
+        main:
+          enabled: true
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
+            # proxy-body-size is set to 0 to remove the body limit on file uploads
+            nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          hosts:
+            - host: vikunja.pacholoamit.com
+              paths:
+                - "/api/v1"
       configMaps:
         config:
           enabled: true
@@ -30,4 +41,17 @@ spec:
             config.yml:
               service:
                 enableregistration: false
+    frontend:
+      enabled: true
+      ingress:
+        main:
+          enabled: true
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
+            # proxy-body-size is set to 0 to remove the body limit on file uploads
+            nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          hosts:
+            - host: vikunja.pacholoamit.com
+              paths:
+                - "/"
       
