--- a/clusters/home/vikunja.yaml
+++ b/clusters/home/vikunja.yaml
@@ -1,16 +1,16 @@
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: vikunja
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: longhorn
-#   interval: 1m
-#   prune: true
-#   wait: true
-#   path: ./apps/vikunja
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: vikunja
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: longhorn
+  interval: 1m
+  prune: true
+  wait: true
+  path: ./apps/vikunja
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
