--- a/apps/vikunja/release.yaml
+++ b/apps/vikunja/release.yaml
@@ -54,6 +54,6 @@ spec:
             - host: vikunja.pacholoamit.com
               paths:
                 - "/"
-      env:
-        VIKUNJA_API_URL: https://vikunja.pacholoamit.com/api/v1
+      # env:
+      #   VIKUNJA_API_URL: https://vikunja.pacholoamit.com/api/v1
       
