--- a/apps/vikunja/release.yaml
+++ b/apps/vikunja/release.yaml
@@ -42,17 +42,24 @@ spec:
               service:
                 frontendUrl: http://vikunja.local
                 enableregistration: false
-    # frontend:
-    #   enabled: true
-    #   ingress:
-    #     main:
-    #       enabled: true
-    #       annotations:
-    #         kubernetes.io/ingress.class: "nginx"
-    #         # proxy-body-size is set to 0 to remove the body limit on file uploads
-    #         nginx.ingress.kubernetes.io/proxy-body-size: "0"
-    #       hosts:
-    #         - host: vikunja.pacholoamit.com
-    #           paths:
-    #             - "/"
+      env:
+        VIKUNJA_DATABASE_TYPE: "postgres"
+        VIKUNJA_DATABASE_USER: "vikunja"
+        VIKUNJA_DATABASE_PASSWORD: "vikunja"
+        VIKUNJA_DATABASE_NAME: "vikunja"
+    frontend:
+      enabled: true
+      env:
+        VIKUNJA_API_URL: "https://vikunja.pacholoamit.com/api/v1"
+      ingress:
+        main:
+          enabled: true
+          annotations:
+            kubernetes.io/ingress.class: "nginx"
+            # proxy-body-size is set to 0 to remove the body limit on file uploads
+            nginx.ingress.kubernetes.io/proxy-body-size: "0"
+          hosts:
+            - host: vikunja.pacholoamit.com
+              paths:
+                - "/"
       
