--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -75,6 +75,7 @@ spec:
           gethomepage.dev/description: "Dynamically Detected Homepage"
           gethomepage.dev/group: "Dynamic"
           gethomepage.dev/icon: "homepage.png"
+          kubernetes.io/ingress.class: "nginx"
         hosts:
           - host: homelab.pacholoamit.com
             paths:
