--- a/apps/homepage/release.yaml
+++ b/apps/homepage/release.yaml
@@ -1,3 +1,6 @@
+# LINK TO INSPIRATION
+# https://github.dev/Michaelpalacce/HomeLab
+# Search for SOPS implementation
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
