--- a/apps/vaultwarden/deployment.yaml
+++ b/apps/vaultwarden/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vaultwarden-deployment
+  name: vaultwarden
   namespace: default
 spec:
   replicas: 1
